--- a/client/src/components/Home/HomeCard.css
+++ b/client/src/components/Home/HomeCard.css
@@ -1,23 +1,28 @@
 .homecard{
-    width:20rem;
-    height:15rem;
-    background-color:#A6D1D1 ;
-    margin-top:0rem;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/holo.png");
+    width:30vw;
+    height:10rem;
+    border-radius: 15px;
+    margin-left: 2rem;
 }
-.boyImg{
-    height:8.5rem;
-    margin-top: 1.5rem;
-}
-.boyimage{
+.homecard h1{color:white;
+font-size: 2rem;
+text-align: center;
+justify-self: center;
+margin-top:4rem}
+@media(max-width:700px)
+{
+    .homecard{
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/holo.png");
+        width:80vw;
+        height:10rem;
+        border-radius: 15px;
+        margin-left: 2rem;
+        margin-top: 2rem;
+    }
+    .homecard h1{color:white;
+    font-size: 1.6rem;
     text-align: center;
-}
-.footer{
-    height: 4rem;
-    width:20rem;
-    background-color: #298ccd;
-    z-index:100;
-   text-align: center;
-   margin-top: 1.5rem;
-   font-size: 1.4rem;
-   color:white;
+    justify-self: center;
+    margin-top:4rem}
 }
