--- a/client/src/components/Posts/AllPosts.css
+++ b/client/src/components/Posts/AllPosts.css
@@ -1,9 +1,11 @@
 .Post{
     display: flex;
     flex-wrap: wrap;
-    width:100vw;
+    width:80vw;
     justify-content: space-around;
     margin-top:2.5rem;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -52,6 +54,23 @@
     position: relative;
     top:1.5rem;
     font-size: 2rem;
+}
+.showmore{
+    background-color: #247A4D;
+    color:white;
+    margin-left: auto;
+    border:none;
+    margin-right: auto;
+    width:10rem;
+    margin-top: 3rem;
+    text-align: center;
+    padding:1rem;
+    border-radius: 5px;
+}
+.showmore button{
+    background-color: transparent;
+    color:white;
+    border:none;
 }
 @media(max-width:1024px)
 {
