--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -50,6 +50,7 @@ font-style: normal;
     margin-top:-7rem;
     background:transparent;
     border:1px solid white;
+    color:white;
 }
 .loginsubmit{
     margin-top: 2rem;
@@ -80,6 +81,7 @@ font-style: normal;
     width:25rem;
     border-radius: 10px;
     height:2.5rem;
+    color:white
 }
 .signtop h1{
     margin-left:0rem;
