--- a/client/src/components/Posts/PostRegister.css
+++ b/client/src/components/Posts/PostRegister.css
@@ -40,28 +40,45 @@ hr{
     border: 1px solid white;
     background: transparent;
     border-radius: 5px; 
+    width:50vw;
 }
 
-.buttonsection{
-    display: block;
+.button_section{
+    display: flex;
+    justify-content: space-around;
+    width:30vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
 }
 .green{
     background-color: #247A4D;
     color:white;
     padding:0.3rem 2rem;
-    margin:1rem 3rem 0rem 30rem;
+    /* margin:1rem 3rem 0rem 30rem; */
     border:none;
     border-radius:5px;
+
 }
 .white{
     color: #247A4D;
     background-color:white;
     padding:0.3rem 2rem;
-    margin:3rem;
+    /* margin:3rem; */
     border:none;
     border-radius:5px;
+    
 }
-
+.loginimageinput{
+    width:20rem;
+    border-radius:10px;
+    height:2.5rem;
+    margin-top:0rem;
+    background:transparent;
+    border:1px solid white;
+    color:white;
+    padding:0rem;
+}
 
 
 
@@ -126,7 +143,7 @@ hr{
         background-color: #247A4D;
         color:white;
         padding:0.3rem 2rem;
-        margin:1rem 0rem 0rem 2rem;
+        /* margin:1rem 0rem 0rem 2rem; */
         border:none;
         border-radius:5px;
     }
@@ -134,9 +151,16 @@ hr{
         color: #247A4D;
         background-color:white;
         padding:0.3rem 2rem;
-        margin:3rem 0rem 3rem 3rem;
+        /* margin:3rem 0rem 3rem 3rem; */
         border:none;
         border-radius:5px;
+    }
+    .button_section{
+        display: flex;
+        justify-content: space-around;
+        width:90vw;
+        margin-left: auto;
+        margin-right: auto;
     }
     
 }
