--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -123,6 +123,11 @@ a.active,a:hover {
   transition:0.5s;
 
 }
+a:active{
+    background: #1C603F;
+    transition:0.5s;
+  
+}
 .checkbtn {
   font-size:30px;
   color:white;
@@ -165,10 +170,12 @@ a.active,a:hover {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #282828;
+    background-color:transparent;
+    color:white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    margin-top:6rem;
   }
   
   /* Links inside the dropdown */
@@ -183,7 +190,7 @@ margin-top: -6rem;
 }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown-content a:hover {background-color: #ddd; color:black;}
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
@@ -239,6 +246,7 @@ margin-top: 0.5rem;
     background:none;
     color: #0082e6;
   }
+
   #check:checked ~ ul {
     left:0;
   }
