--- a/client/src/components/Submission/SubmissionRegister.css
+++ b/client/src/components/Submission/SubmissionRegister.css
@@ -39,6 +39,7 @@ hr{
     border: 1px solid white;
     background: transparent;
     border-radius: 5px; 
+    width:40vw;
 }
 .sign__input{
     width:7rem;
@@ -51,16 +52,21 @@ hr{
 }
 
 .button__section{
-    display: block;
-    margin-top: -2rem;
-    margin-bottom: 1rem;
+   
+        display: flex;
+        justify-content: space-around;
+        width:30vw;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2rem;
+    
    
 }
 .green1{
     background-color: #247A4D;
     color:white;
     padding:0.3rem 2rem;
-    margin:0rem 3rem 0rem 20rem;
+    /* margin:0rem 3rem 0rem 20rem; */
     border:none;
     border-radius:5px;
 }
@@ -130,16 +136,21 @@ hr{
     }
     
     .button__section{
-        display: block;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+     
+            display: flex;
+            justify-content: space-around;
+            width:90vw;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 2rem;
+        
        
     }
     .green1{
         background-color: #247A4D;
         color:white;
         padding:0.3rem 2rem;
-        margin:0rem 0rem 0rem 2rem;
+        /* margin:0rem 0rem 0rem 2rem; */
         border:none;
         border-radius:5px;
     }
