--- a/client/src/components/Submission/SubmissionRegister.css
+++ b/client/src/components/Submission/SubmissionRegister.css
@@ -123,6 +123,7 @@ hr{
         border: 1px solid white;
         background: transparent;
         border-radius: 5px; 
+        width:80vw;
     }
     .sign__input{
         width:7rem;
