--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caveat&family=Courgette&family=Lobster&family=Montserrat:wght@100;200&family=Patrick+Hand&display=swap');
+
+
 .HomeContainer{
     height:60vh;
 }
@@ -5,6 +9,12 @@
     position: absolute;
     top:10rem;
     left:15rem;
+    font-family: 'Bebas Neue', cursive;
+    font-family: 'Caveat', cursive;
+    font-family: 'Courgette', cursive;
+    font-family: 'Lobster', cursive;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Patrick Hand', cursive;
 }
 .homehead h1{
     color: white;
