--- a/client/src/components/Posts/AllPosts.css
+++ b/client/src/components/Posts/AllPosts.css
@@ -66,6 +66,7 @@
     text-align: center;
     padding:1rem;
     border-radius: 5px;
+    margin-bottom: 3rem;
 }
 .showmore button{
     background-color: transparent;
@@ -79,7 +80,7 @@
         flex-wrap: wrap;
         width:100vw;
         justify-content: space-around;
-        margin-top:5rem;
+        margin-top:2rem;
     
     }
     .searchbox{
