--- a/client/src/components/Posts/PostCard.css
+++ b/client/src/components/Posts/PostCard.css
@@ -3,7 +3,7 @@
     background:#282828;
     box-shadow:0px 0px  10px black;
     border:1px solid black;
-    height:21vw;;
+    height:auto;
     width:18vw;
     margin-top: 3rem;
 
@@ -15,7 +15,7 @@
     border-radius:5px;
     padding:0.5rem;
     margin-top: 1rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     width:10rem;
     margin-left: auto;
     margin-right: auto;
@@ -32,8 +32,14 @@
     color:white;
     
 }
-.buttonsecion{
-    margin:3rem;
+.buttonsection{
+    margin-bottom:1rem; 
+    display: flex;
+    justify-content: space-around;
+    width:18vw;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .linkButton{
     background-color: white;
@@ -43,11 +49,13 @@
     padding-bottom: 0.6rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    margin: 1.5rem;
-    margin-top: 2rem;
-    position: relative;
-    left:1rem;
+     /* margin: 1.5rem;
+    margin-top: 2rem; 
+     position: relative;
+    left:1rem;  */
     border-radius: 5px;
+    border:none;
+    font-weight: 600;
 
 }
 .subLink{
@@ -58,9 +66,10 @@
     padding-bottom: 0.6rem;
     padding-left: 2rem;
     padding-right: 2rem;
-   position: relative;
- left:1.5rem;
+    /* position: relative;
+ left:1.5rem;  */
  border-radius: 5px;
+ border:none;
 }
 h6{
     margin-top:1rem;
@@ -82,9 +91,9 @@ h6{
     background:#282828;
     box-shadow:0px 0px  10px black;
     border:1px solid black;
-    height:80vw;;
+    height:auto;
     width:80vw;
-    margin-bottom: 3rem;
+    margin-bottom:1rem;
 
 }
 .postcard h1{
@@ -94,7 +103,7 @@ h6{
     border-radius:5px;
     padding:0.5rem;
     margin-top: 1rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     width:10rem;
     margin-left: auto;
     margin-right: auto;
@@ -111,8 +120,13 @@ h6{
     color:white;
     
 }
-.buttonsecion{
-    margin:3rem;
+.buttonsection{
+     margin-bottom:1rem; 
+    display: flex;
+    justify-content: space-around;
+    width:80vw;
+    margin-left: auto;
+    margin-right: auto;
 }
 .linkButton{
     background-color:white;
@@ -122,10 +136,10 @@ h6{
     padding-bottom: 0.6rem;
     padding-left: 2rem;
     padding-right: 2rem;
-    margin: 1.5rem;
-    margin-top: 2rem;
-    position: relative;
-    left:1rem;
+    /* margin: 1.5rem;
+    margin-top: 2rem; 
+     position: relative;
+    left:1.2rem; */
     border-radius: 5px;
 
 }
@@ -137,8 +151,8 @@ h6{
     padding-bottom: 0.6rem;
     padding-left: 2rem;
     padding-right: 2rem;
-   position: relative;
- left:1.5rem;
+    /* position: relative;
+ left:1.5rem;  */
  border-radius: 5px;
 }
 h6{
