--- a/client/src/components/Submission/AcceptRejectElement.css
+++ b/client/src/components/Submission/AcceptRejectElement.css
@@ -126,8 +126,13 @@
     text-align: center;
   }
   .decision{
-    width:15vw;
-    margin-top:2rem;
+    margin-bottom:1rem; 
+    display: flex;
+    justify-content: space-around;
+    width:16vw;
+    margin-left: -1rem;
+    margin-right: auto;
+ 
   }
   .accept{
     background-color: #247A4D;
@@ -135,9 +140,10 @@
     text-align: center;
     width:5rem;
     border: none;
-    margin-left:2rem;
-    margin-right:1.5rem;
+    /* margin-left:2rem;
+    margin-right:1.5rem; */
     padding: 0.4rem;
+   
   }
   .reject{
     background-color: #6F0000;
@@ -194,6 +200,8 @@
       .decision{
         width:70vw;
         margin-top:2rem;
+        display: flex;
+        justify-content: space-around;
       }
       .accept{
         background-color: #247A4D;
@@ -201,7 +209,7 @@
         text-align: center;
         width:5rem;
         border: none;
-        margin-left:1.5rem;
+        /* margin-left:1.5rem; */
         
         padding: 0.4rem;
       }
@@ -212,7 +220,7 @@
         width:5rem;
         border: none;
         padding: 0.4rem;
-        margin-left: 2rem;
+        /* margin-left: 2rem; */
         
       }
   }
