--- a/client/src/components/Submission/SubmissionPage.css
+++ b/client/src/components/Submission/SubmissionPage.css
@@ -41,7 +41,7 @@
 }
 .singleLink{
 margin-top: 1rem;
-background-color: #247A4D;
+
 width:22vw;
 padding-left:1rem;
 padding-right: 1rem;
@@ -50,6 +50,9 @@ border-radius: 5px;
 .linkhead{
 margin-right: 1rem;
 font-size: 1.2rem;
+background-color: #247A4D;
+padding-left:1rem;
+padding-right: 1rem;
 }
 .linkurl{
 color:white;
