--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -81,6 +81,7 @@ label.logo img{
   font-weight:bold; */
 margin-top: -3rem;
 margin-left: 3rem;
+height:4rem;
 }
 .clubname{
     display: inline-block;
@@ -89,15 +90,15 @@ margin-left: 3rem;
 }
 .clubname h3{
     margin-top:-2rem;
-    margin-bottom: 0;
+    margin-bottom: 0.1rem;
     color: white;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
 }
 .clubname h2{
     margin-top:0rem;
-    margin-bottom: 0;
+    margin-bottom: 0.1rem;
     color: white;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
 }
 nav ul {
   float: right;
@@ -150,54 +151,57 @@ a:active{
     margin-top: 1rem;
     height:3.2rem;
 }
-.dropbtn {
+ .dropbtn {
     background-color: transparent;
     color: white;
     width:auto;
     height:auto;
-    font-size:1.5rem;
+    font-size:1.2rem;
     border: none;
   }
-  
-  /* The container <div> - needed to position the dropdown content */
+
   .dropdown {
     position: relative;
     display: inline-block;
    
   }
-  
-  /* Dropdown Content (Hidden by Default) */
+
   .dropdown-content {
     display: none;
     position: absolute;
-    color:white;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    margin-top:6rem;
-   
-  
+right:-4.5rem;
+ margin-top:6rem;
+ background-color:#282828;
+ box-shadow: 0px 0px 10px black;
+   width:20rem;
+   border-radius: 5px;
+  z-index:100;
   }
-  
-  /* Links inside the dropdown */
+
 .dropdown-content a{
-    color: black;
-    background-color:#1C603F;
+    color: white;
+    background-color:#282828;
     text-decoration: none;
     display: block;
 margin-top: -6rem;
     font-size: 0.7rem;
+    text-align: center;
+    height: 5.5rem;
 
 }
-  
-  /* Change color of dropdown links on hover */
+.dropdown-content a hr{
+  margin-top: -1rem;
+
+}
+
   .dropdown-content a:hover {background-color: #ddd; color:black;}
   
-  /* Show the dropdown menu on hover */
+
   .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #1C603F;}
+
+ 
+  .dropdown:hover .dropbtn {background-color: #1C603F;} 
+
 @media (max-width:952px) {
     nav{
         background-color: black;
@@ -216,6 +220,8 @@ margin-top: 0.5rem;
   nav ul li a {
     font-size:16px;
   }
+  
+
 }
 @media (max-width:858px) {
   .checkbtn {
@@ -276,24 +282,44 @@ margin-top: 0.5rem;
     margin-top: 1rem;
     height:3.2rem;
 }
-.dropdown-content a{
-    color: black;
-  
-    text-decoration: none;
-    display: block;
-margin-top:-0.7rem;
-    font-size: 0.7rem;
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  width:auto;
+  height:auto;
+  font-size:1.2rem;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+ 
+}
+
+.dropdown-content {
+  display: none;
+position: auto;
+margin-top: 0;
+left:-3.7rem;
+
+background-color:transparent;
+box-shadow: 0px 0px 10px black;
+ width:15rem;
+ border-radius: 5px;
 
 }
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color:transparent;
-    color:white;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    margin-top:1rem;
-  }
+
+.dropdown-content a{
+  color: white;
+  background-color:transparent;
+  text-decoration: none;
+  display: block;
+margin-top: 0rem;
+  font-size: 0.7rem;
+  text-align: center;
+  height:2rem;
+
+}
 
 }
