--- a/client/src/components/Posts/Post.css
+++ b/client/src/components/Posts/Post.css
@@ -4,6 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 2.5rem;
+  height: 100vh;
 }
 .postpage h1{
     color:white;
@@ -33,7 +34,7 @@
 .skills{
     margin-top: 3rem;
     color: white;
-    width:10vw;
+    width:15vw;
     position: absolute;
     right:18em;
     top:25rem;
@@ -41,15 +42,30 @@
 }
 .skills p{
     background-color: #247A4D;
+    display: inline-block;
+    width:auto;
+    margin-left:0.8rem;
+    padding:0.5rem;
 
 }
 .skills button{
-    margin-top: 3rem;
+    margin-top: 2rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 3.5rem;
     padding-right: 3.5rem;
     color: #247A4D;
+    width:20rem;
+    font-weight: 600;
+    border-radius: 10px;
+    border: none;
+}
+.attachment{
+    text-decoration: none;
+    color:white;
+    background-color: #247A4D;
+    border-radius: 5px;
+    padding:0.3rem;
 }
 @media(max-width:700px)
 {
@@ -98,7 +114,8 @@
 
 }
 .skills button{
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 3.5rem;
