--- a/client/src/components/Posts/PostCard.css
+++ b/client/src/components/Posts/PostCard.css
@@ -9,7 +9,7 @@
 
 }
 .postcard h1{
-    text-align: center;
+    /* text-align: center;
     color: white;
     background-color: #247A4D;
     border-radius:5px;
@@ -18,8 +18,18 @@
     font-size: 1.2rem;
     width:10rem;
     margin-left: auto;
+    margin-right: auto; */
+    font-size:1.2rem;
+    color:white;
+    background-color: #247A4D;
+    border-radius: 5px;
+    width:10rem;
+    padding:0.5rem;
+    margin-left: auto;
     margin-right: auto;
-    
+    margin-top: -0.5rem;
+    text-align: center;
+
 }
 .postcard h3{
     margin-top:1rem;
@@ -81,7 +91,10 @@ h6{
     background-color:transparent;
     color:white;
     border:none;
-    margin-left: 1rem;
+    position: relative;
+    right:-1rem;
+    top:1rem;
+    display: inline;
 }
 
 @media(max-width:700px)
