--- a/client/src/components/Submission/AcceptRejectElement.css
+++ b/client/src/components/Submission/AcceptRejectElement.css
@@ -89,7 +89,7 @@
     box-shadow: 0px 0px 12px black;
     border:1px solid black;
     width:16vw;
-    height:15vw;
+    height:auto;
     border-radius:10px;
 
   }
@@ -110,7 +110,7 @@
   }
   .acceptcard h1{
     color:white;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-top: 1.2rem;
     margin-bottom: 0;
     margin-left:4.5rem;
@@ -154,6 +154,9 @@
     padding: 0.4rem;
     
   }
+  .status{
+    margin-bottom: 2rem;
+  }
   @media(max-width:700px)
   {
     .acceptcard{
@@ -163,6 +166,7 @@
         width:70vw;
         height:60vw;
         border-radius:10px;
+        margin-bottom: 1rem;
     
       }
       .namecard{
